tests/tests/snapshots/test__swift__swift-export-raw.snap
---
source: tests/tests/swift.rs
expression: phase_output(result)
---
// This file has been generated by Specta. DO NOT EDIT.
import Foundation

public enum JobStatus: String, Codable {
    case queued = "queued"
    case pendingApproval = "pending_approval"
}

public enum MixedEnum {
    case unit(    case unit
)
    case withData(MixedEnumWithDataData)
}
public struct MixedEnumWithDataData: Codable {
    public let withData: String

    private enum CodingKeys: String, CodingKey {
        case withData = "with_data"
    }
}

// MARK: - MixedEnum Codable Implementation
extension MixedEnum: Codable {
    private enum CodingKeys: String, CodingKey {
        case unit = "unit"
        case withData = "with_data"
    }

    public init(from decoder: Decoder) throws {
        let container = try decoder.container(keyedBy: CodingKeys.self)
        
        if container.allKeys.count != 1 {
            throw DecodingError.dataCorrupted(
                DecodingError.Context(codingPath: decoder.codingPath, debugDescription: "Invalid number of keys found, expected one.")
            )
        }

        let key = container.allKeys.first!
        switch key {
        case .unit:
            // TODO: Implement tuple variant decoding for unit
            fatalError("Tuple variant decoding not implemented")
        case .withData:
            let data = try container.decode(MixedEnumWithDataData.self, forKey: .withData)
            self = .withData(data)
        }
    }

    public func encode(to encoder: Encoder) throws {
        var container = encoder.container(keyedBy: CodingKeys.self)
        
        switch self {
        case .unit:
            // TODO: Implement tuple variant encoding for unit
            fatalError("Tuple variant encoding not implemented")
        case .withData(let data):
            try container.encode(data, forKey: .withData)
        }
    }
}


public enum RegularEnum: String, Codable {
    case variantOne = "VariantOne"
    case variantTwo = "VariantTwo"
}
