tests/tests/snapshots/test__swift__swift-export-serde.snap
---
source: tests/tests/swift.rs
expression: phase_output(result)
---
// This file has been generated by Specta. DO NOT EDIT.
import Foundation

public enum JobStatus {
    case queued(JobStatusQueuedData)
    case pendingApproval(JobStatusPendingApprovalData)
}
public struct JobStatusQueuedData: Codable {
    public let queued:     case queued = "queued"

}

public struct JobStatusPendingApprovalData: Codable {
    public let pendingApproval:     case pendingApproval = "pending_approval"


    private enum CodingKeys: String, CodingKey {
        case pendingApproval = "pending_approval"
    }
}

// MARK: - JobStatus Codable Implementation
extension JobStatus: Codable {
    private enum CodingKeys: String, CodingKey {
        case queued = "queued"
        case pendingApproval = "pending_approval"
    }

    public init(from decoder: Decoder) throws {
        let container = try decoder.container(keyedBy: CodingKeys.self)
        
        if container.allKeys.count != 1 {
            throw DecodingError.dataCorrupted(
                DecodingError.Context(codingPath: decoder.codingPath, debugDescription: "Invalid number of keys found, expected one.")
            )
        }

        let key = container.allKeys.first!
        switch key {
        case .queued:
            let data = try container.decode(JobStatusQueuedData.self, forKey: .queued)
            self = .queued(data)
        case .pendingApproval:
            let data = try container.decode(JobStatusPendingApprovalData.self, forKey: .pendingApproval)
            self = .pendingApproval(data)
        }
    }

    public func encode(to encoder: Encoder) throws {
        var container = encoder.container(keyedBy: CodingKeys.self)
        
        switch self {
        case .queued(let data):
            try container.encode(data, forKey: .queued)
        case .pendingApproval(let data):
            try container.encode(data, forKey: .pendingApproval)
        }
    }
}


public enum MixedEnum {
    case unit(MixedEnumUnitData)
    case withData(MixedEnumWithDataData)
}
public struct MixedEnumUnitData: Codable {
    public let unit:     case unit = "unit"

}

public struct MixedEnumWithDataData: Codable {
    public let withData:     public let withData: String

    private enum CodingKeys: String, CodingKey {
        case withData = "with_data"
    }


    private enum CodingKeys: String, CodingKey {
        case withData = "with_data"
    }
}

// MARK: - MixedEnum Codable Implementation
extension MixedEnum: Codable {
    private enum CodingKeys: String, CodingKey {
        case unit = "unit"
        case withData = "with_data"
    }

    public init(from decoder: Decoder) throws {
        let container = try decoder.container(keyedBy: CodingKeys.self)
        
        if container.allKeys.count != 1 {
            throw DecodingError.dataCorrupted(
                DecodingError.Context(codingPath: decoder.codingPath, debugDescription: "Invalid number of keys found, expected one.")
            )
        }

        let key = container.allKeys.first!
        switch key {
        case .unit:
            let data = try container.decode(MixedEnumUnitData.self, forKey: .unit)
            self = .unit(data)
        case .withData:
            let data = try container.decode(MixedEnumWithDataData.self, forKey: .withData)
            self = .withData(data)
        }
    }

    public func encode(to encoder: Encoder) throws {
        var container = encoder.container(keyedBy: CodingKeys.self)
        
        switch self {
        case .unit(let data):
            try container.encode(data, forKey: .unit)
        case .withData(let data):
            try container.encode(data, forKey: .withData)
        }
    }
}


public enum RegularEnum {
    case variantOne(RegularEnumVariantOneData)
    case variantTwo(RegularEnumVariantTwoData)
}
public struct RegularEnumVariantOneData: Codable {
    public let variantOne:     case variantOne = "VariantOne"


    private enum CodingKeys: String, CodingKey {
        case variantOne = "VariantOne"
    }
}

public struct RegularEnumVariantTwoData: Codable {
    public let variantTwo:     case variantTwo = "VariantTwo"


    private enum CodingKeys: String, CodingKey {
        case variantTwo = "VariantTwo"
    }
}

// MARK: - RegularEnum Codable Implementation
extension RegularEnum: Codable {
    private enum CodingKeys: String, CodingKey {
        case variantOne = "VariantOne"
        case variantTwo = "VariantTwo"
    }

    public init(from decoder: Decoder) throws {
        let container = try decoder.container(keyedBy: CodingKeys.self)
        
        if container.allKeys.count != 1 {
            throw DecodingError.dataCorrupted(
                DecodingError.Context(codingPath: decoder.codingPath, debugDescription: "Invalid number of keys found, expected one.")
            )
        }

        let key = container.allKeys.first!
        switch key {
        case .variantOne:
            let data = try container.decode(RegularEnumVariantOneData.self, forKey: .variantOne)
            self = .variantOne(data)
        case .variantTwo:
            let data = try container.decode(RegularEnumVariantTwoData.self, forKey: .variantTwo)
            self = .variantTwo(data)
        }
    }

    public func encode(to encoder: Encoder) throws {
        var container = encoder.container(keyedBy: CodingKeys.self)
        
        switch self {
        case .variantOne(let data):
            try container.encode(data, forKey: .variantOne)
        case .variantTwo(let data):
            try container.encode(data, forKey: .variantTwo)
        }
    }
}
