tests/tests/snapshots/test__swift__swift-tuple-default-phases.snap
---
source: tests/tests/swift.rs
assertion_line: 86
expression: rendered
---
// This file has been generated by Specta. DO NOT EDIT.
import Foundation

/// A trailing `#[serde(default)]` tuple element is optional on deserialize
/// (serde accepts `[1]`) — the deserialize half must mark it optional
/// instead of requiring every element.
public enum SwiftTupleDefault: Codable {
    case serialize(SwiftTupleDefaultSerialize)
    case deserialize(SwiftTupleDefaultDeserialize)
}

/// A trailing `#[serde(default)]` tuple element is optional on deserialize
/// (serde accepts `[1]`) — the deserialize half must mark it optional
/// instead of requiring every element.
public struct SwiftTupleDefaultDeserialize: Codable {
    public let field0: UInt8
    public let field1: UInt8?
}

/// A trailing `#[serde(default)]` tuple element is optional on deserialize
/// (serde accepts `[1]`) — the deserialize half must mark it optional
/// instead of requiring every element.
public struct SwiftTupleDefaultSerialize: Codable {
    public let field0: UInt8
    public let field1: UInt8
}
